--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -28,6 +28,9 @@
         <link rel="shortcut icon" href="<?php echo $this->baseUrl ?>/img/favicon.html">
 
         <script src="<?php echo $this->baseUrl ?>/assets/modernizr/modernizr-2.6.2.min.js"></script>
+        
+        <script src="<?php echo $this->baseUrl ?>/assets/jquery/jquery-1.10.1.min.js"></script>
+        
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -99,7 +102,7 @@
                     <a href="#" class="brand">
                         <small>
                             <i class="icon-desktop"></i>
-                            FOSEPFAP Admin
+                            FOSEPFAP
                         </small>
                     </a>
                     <!-- END Brand -->
@@ -620,7 +623,7 @@
         <script src="<?php echo $this->baseUrl ?>/assets/sparkline/jquery.sparkline.min.js"></script>
 
         <!--flaty scripts-->
-        <script src="<?php echo $this->baseUrl ?>/js/flaty.js"></script>
+        <script src="<?php echo $this->baseUrl ?>/js/flatyFull.js"></script>
 
     </body>
 </html>
