--- a/application/views/scripts/auth/index.phtml
+++ b/application/views/scripts/auth/index.phtml
@@ -36,7 +36,7 @@
         <!-- BEGIN Main Content -->
         <div class="login-wrapper">
             <!-- BEGIN Login Form -->
-            <form id="form-login" action="/zend/Fosefap_v1.2/public/auth" method="POST">
+            <form id="form-login" action="<?php echo $this->baseUrl ?>/auth" method="POST">
                 <h3>Login to your account</h3>
                 <hr/>
                 <div class="control-group">
