--- a/application/views/scripts/proveedor/index.phtml
+++ b/application/views/scripts/proveedor/index.phtml
@@ -1,102 +1,355 @@
-<!--creo link para agregar un album -->
+<!--FALTA EL BOTON EXPORTAR Y AGREGAR -->
 
-Busqueda:
-<select id="filtroproveedor" >
-	<option value="1">RUC</option>
-	<option value="2">Nombre</option>
-</select> 
+<!--page specific css styles-->
+<link rel="stylesheet" href="<?php echo $this->baseUrl ?>/assets/data-tables/DT_bootstrap.css" />
 
-<input type="text" name="txtBusqueda" id="txtBusqueda">
-<input style="display:none" type="text" name="txtBusquedaNombre" id="txtBusquedaNombre"> 
-<input type="button" class="btn" value="Buscar" id="buscar">
-
-<input type="button" class="btn" value="Exportar" id="exportar">
-
-
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 <script>
-
-$('#exportar').on('click',function(){
-
-window.location.href = "<?php echo $this->url(array('controller' => 'proveedor','action' => 'exportarpdf') ); ?>"
-
-
-})
-
-
-
-$('#filtroproveedor').on('change',function(){
-
-	if( $(this).val() == 2 ){ 
-		$('#buscar').hide()
-		$('#txtBusquedaNombre').show()
-		$('#txtBusqueda').hide()		
-		
-	}
-		
-	if( $(this).val() == 1 ){ 
-		$('#buscar').show()	
-		$('#txtBusquedaNombre').hide()
-		$('#txtBusqueda').show()				
-	}	
-
-})
-
-
-//BUSQUEDA POR NOMBRE
-
-$("#txtBusquedaNombre").keyup( function(){
-	//console.log( $(this).val() )
-	var valueBusq = $(this).val()
-	
-		$.get('<?php echo $this->url(array('controller' => 'proveedor','action' => 'busquedaxnombre') ); ?>',{valueBusq:valueBusq}, function(data) {
-		$('#containerTable').empty();	
-		$('#containerTable').html( $(data).html() )
-		  
-		});	
-	
-	
-})
-
-
-//BUSQUEDA POR RUC
-$('#buscar').on('click',function(){
-    	
-    var valueBusq = $("#txtBusqueda").val()
-
-    $.get('<?php echo $this->url(array('controller' => 'proveedor','action' => 'busquedaxruc') ); ?>',{valueBusq:valueBusq}, function(data) {
-        $('#containerTable').empty();
-        $('#containerTable').html( $(data).html() )
-    });	
     
-})
+    $(document).ready(function(){
+        
+        if (jQuery().dataTable) {
+            $("#table1").dataTable({
+                aLengthMenu: [
+                    [10, 15, 25, 50, 100, -1],
+                    [10, 15, 25, 50, 100, "All"]
+                ],
+                iDisplayLength: 10,
+                oLanguage: {
+                    sLengthMenu: "_MENU_ Records per page",
+                    sInfo: "_START_ - _END_ of _TOTAL_",
+                    sInfoEmpty: "0 - 0 of 0",
+                    oPaginate: {
+                        sPrevious: "Prev",
+                        sNext: "Next"
+                    }
+                },
+                aoColumnDefs: [{
+                    bSortable: false,
+                    aTargets: [0]
+                }]
+            })
+        }
 
-
+    })
+    
+    
 
 
 </script>
 
 
-<table>
-    <tr style="border:none;background:none"> 
-        <td style="border:none;background:none">  
-            <a href="<?php echo $this->url(array('controller' => 'proveedor','action' => 'add')); ?>"> 
-                <img src="<?php echo $this->baseUrl ?>/images/add.gif" title="Agregar">
-            </a>    
-        </td>    
-        <td style="border:none;background:none"> 
-            <a href="<?php echo $this->url(array('controller' => 'proveedor','action' => 'add')); ?>">         
-            proveedor
-            </a>
-        </td> 
-    </tr>    
+            <!-- BEGIN Content -->
+            <div id="main-content">
+                <!-- BEGIN Page Title -->
+                <div class="page-title">
+                    <div>
+                        <h1><i class="icon-file-alt"></i> Dynamic Table</h1>
+                        <h4>Dynamic tables by DataTables</h4>
+                    </div>
+                </div>
+                <!-- END Page Title -->
+
+                <!-- BEGIN Breadcrumb -->
+                <div id="breadcrumbs">
+                    <ul class="breadcrumb">
+                        <li>
+                            <i class="icon-home"></i>
+                            <a href="index.html">Home</a>
+                            <span class="divider"><i class="icon-angle-right"></i></span>
+                        </li>
+                        <li class="active">Dynamic Table</li>
+                    </ul>
+                </div>
+                <!-- END Breadcrumb -->
+
+                <!-- BEGIN Main Content -->
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div class="box">
+                            <div class="box-title">
+                                <h3><i class="icon-table"></i> Dynamic Table</h3>
+                                <div class="box-tool">
+                                    <a data-action="collapse" href="#"><i class="icon-chevron-up"></i></a>
+                                    <a data-action="close" href="#"><i class="icon-remove"></i></a>
+                                </div>
+                            </div>
+                            <div class="box-content">
+                                <div class="btn-toolbar pull-right clearfix">
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Add new record" href="#"><i class="icon-plus"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Edit selected" href="#"><i class="icon-edit"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Delete selected" href="#"><i class="icon-trash"></i></a>
+                                    </div>
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Print" href="#"><i class="icon-print"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Export to PDF" href="#"><i class="icon-file-text-alt"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Export to Exel" href="#"><i class="icon-table"></i></a>
+                                    </div>
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Refresh" href="#"><i class="icon-repeat"></i></a>
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+<table class="table table-advance" id="table1">
+    <thead>
+        <tr>
+            <th style="width:18px"><input type="checkbox" /></th>
+            <th>Rendering engine</th>
+            <th>Browser</th>
+            <th>Platform(s)</th>
+            <th class="text-center">Engine version</th>
+            <th>CSS grade</th>
+            <th style="width:100px">Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr class="table-flag-blue">
+            <td><input type="checkbox" /></td>
+            <td>Trident</td>
+            <td>Internet Explorer 7</td>
+            <td>Win XP SP2+</td>
+            <td class="text-center">7</td>
+            <td><span class="label label-success">A</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" /></td>
+            <td>Trident</td>
+            <td><a href="#">AOL browser (AOL desktop)</a></td>
+            <td>Win XP</td>
+            <td class="text-center">6</td>
+            <td><span class="label label-success">A</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr class="table-flag-orange">
+            <td><input type="checkbox" /></td>
+            <td>Gecko</td>
+            <td><span class="label label-success">Not Bad</span> Firefox 1.5</td>
+            <td>Win 98+ / OSX.2+</td>
+            <td class="text-center">1.8</td>
+            <td><span class="label label-success">A</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" /></td>
+            <td>Gecko</td>
+            <td>Netscape Navigator 9</td>
+            <td>Win 98+ / OSX.2+</td>
+            <td class="text-center">1.8</td>
+            <td><span class="label label-success">A</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" /></td>
+            <td>Gecko</td>
+            <td>Seamonkey 1.1</td>
+            <td>Win 98+ / OSX.2+</td>
+            <td class="text-center">1.8</td>
+            <td><span class="label label-warning">B</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" /></td>
+            <td>Gecko</td>
+            <td>Mozilla 1.8</td>
+            <td>Win 98+ / OSX.1+</td>
+            <td class="text-center">1.8</td>
+            <td><span class="label label-success">A</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr class="table-flag-blue">
+            <td><input type="checkbox" /></td>
+            <td>Trident</td>
+            <td><span class="label label-warning">So crazy!</span> <a href="#">Internet Explorer 6</a></td>
+            <td>Win 98+</td>
+            <td class="text-center">6</td>
+            <td><span class="label label-important">C</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr class="table-flag-red">
+            <td><input type="checkbox" /></td>
+            <td>Presto</td>
+            <td>Opera 7.5</td>
+            <td>Win 95+ / OSX.2+</td>
+            <td class="text-center">-</td>
+            <td><span class="label label-success">A</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr class="table-flag-red">
+            <td><input type="checkbox" /></td>
+            <td>Presto</td>
+            <td><span class="label label-info">It's Opera!</span> Opera 8.0</td>
+            <td>Win 95+ / OSX.2+</td>
+            <td class="text-center">-</td>
+            <td><span class="label label-success">A</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" /></td>
+            <td>Gecko</td>
+            <td><a href="#">Mozilla 1.0</a></td>
+            <td>Win 95+ / OSX.1+</td>
+            <td class="text-center">1</td>
+            <td><span class="label label-warning">B</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" /></td>
+            <td>Gecko</td>
+            <td>Mozilla 1.1</td>
+            <td>Win 95+ / OSX.1+</td>
+            <td class="text-center">1.1</td>
+            <td><span class="label label-success">A</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr class="table-flag-blue">
+            <td><input type="checkbox" /></td>
+            <td>Misc</td>
+            <td>IE Mobile</td>
+            <td>Windows Mobile 6</td>
+            <td class="text-center">-</td>
+            <td><span class="label label-important">C</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" /></td>
+            <td>Gecko</td>
+            <td><a href="#">Mozilla 1.2</a></td>
+            <td>Win 95+ / OSX.1+</td>
+            <td class="text-center">1</td>
+            <td><span class="label label-warning">B</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr class="table-flag-red">
+            <td><input type="checkbox" /></td>
+            <td>Presto</td>
+            <td>Opera 7.7</td>
+            <td>Win 95+ / OSX.2+</td>
+            <td class="text-center">-</td>
+            <td><span class="label label-success">A</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" /></td>
+            <td>Gecko</td>
+            <td>Mozilla 1.7</td>
+            <td>Win 98+ / OSX.1+</td>
+            <td class="text-center">1.8</td>
+            <td><span class="label label-success">A</span></td>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
+                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
+                </div>
+            </td>
+        </tr>
+    </tbody>
 </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- END Main Content -->
+                
+                <footer>
+                    <p>2013 © FLATY Admin Template.</p>
+                </footer>
 
+                <a id="btn-scrollup" class="btn btn-circle btn-large" href="#"><i class="icon-chevron-up"></i></a>
+            </div>
+            <!-- END Content -->
+            
+            
+        <!--page specific plugin scripts-->
+        <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/jquery.dataTables.js"></script>
+        <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/DT_bootstrap.js"></script>
+            
 
-<!--creo una tabla para mostrar los datos-->
-
-
-<div id="containerTable" style="width: 603px;overflow: scroll;">
 <table>
     <tr>
         <th>Item</th>
@@ -175,4 +428,3 @@ $('#buscar').on('click',function(){
 <!--    fin del for-->
     <?php endforeach; ?>
 </table>
-</div>
