--- a/application/views/scripts/proveedor/index.phtml
+++ b/application/views/scripts/proveedor/index.phtml
@@ -9,6 +9,12 @@
         
         if (jQuery().dataTable) {
             $("#table1").dataTable({
+                sScrollX: "100%",
+                sScrollXInner: "110%",
+                bScrollCollapse: true,                
+                bProcessing: true,
+                bServerSide: true,
+                sAjaxSource: "proveedor/listarproveedores",                
                 aLengthMenu: [
                     [10, 15, 25, 50, 100, -1],
                     [10, 15, 25, 50, 100, "All"]
@@ -93,241 +99,27 @@
 <table class="table table-advance" id="table1">
     <thead>
         <tr>
-            <th style="width:18px"><input type="checkbox" /></th>
-            <th>Rendering engine</th>
-            <th>Browser</th>
-            <th>Platform(s)</th>
-            <th class="text-center">Engine version</th>
-            <th>CSS grade</th>
+            <th>RUC</th>
+            <th>categoria</th>
+            <th>nombre</th>
+            <th class="text-center">direccion</th>
+            <th>departamento</th>
+            <th>provincia</th>
+            <th>distrito</th>
+            <th>telefono_fijo</th>
+            <th>telefono_celular</th>
+            <th>mail</th>
+            <th>costo</th>
+            <th>observacion</th>
+            <th>user</th>
+            <th>fecha</th>            
             <th style="width:100px">Action</th>
         </tr>
     </thead>
     <tbody>
-        <tr class="table-flag-blue">
-            <td><input type="checkbox" /></td>
-            <td>Trident</td>
-            <td>Internet Explorer 7</td>
-            <td>Win XP SP2+</td>
-            <td class="text-center">7</td>
-            <td><span class="label label-success">A</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" /></td>
-            <td>Trident</td>
-            <td><a href="#">AOL browser (AOL desktop)</a></td>
-            <td>Win XP</td>
-            <td class="text-center">6</td>
-            <td><span class="label label-success">A</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr class="table-flag-orange">
-            <td><input type="checkbox" /></td>
-            <td>Gecko</td>
-            <td><span class="label label-success">Not Bad</span> Firefox 1.5</td>
-            <td>Win 98+ / OSX.2+</td>
-            <td class="text-center">1.8</td>
-            <td><span class="label label-success">A</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" /></td>
-            <td>Gecko</td>
-            <td>Netscape Navigator 9</td>
-            <td>Win 98+ / OSX.2+</td>
-            <td class="text-center">1.8</td>
-            <td><span class="label label-success">A</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" /></td>
-            <td>Gecko</td>
-            <td>Seamonkey 1.1</td>
-            <td>Win 98+ / OSX.2+</td>
-            <td class="text-center">1.8</td>
-            <td><span class="label label-warning">B</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" /></td>
-            <td>Gecko</td>
-            <td>Mozilla 1.8</td>
-            <td>Win 98+ / OSX.1+</td>
-            <td class="text-center">1.8</td>
-            <td><span class="label label-success">A</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr class="table-flag-blue">
-            <td><input type="checkbox" /></td>
-            <td>Trident</td>
-            <td><span class="label label-warning">So crazy!</span> <a href="#">Internet Explorer 6</a></td>
-            <td>Win 98+</td>
-            <td class="text-center">6</td>
-            <td><span class="label label-important">C</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr class="table-flag-red">
-            <td><input type="checkbox" /></td>
-            <td>Presto</td>
-            <td>Opera 7.5</td>
-            <td>Win 95+ / OSX.2+</td>
-            <td class="text-center">-</td>
-            <td><span class="label label-success">A</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr class="table-flag-red">
-            <td><input type="checkbox" /></td>
-            <td>Presto</td>
-            <td><span class="label label-info">It's Opera!</span> Opera 8.0</td>
-            <td>Win 95+ / OSX.2+</td>
-            <td class="text-center">-</td>
-            <td><span class="label label-success">A</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" /></td>
-            <td>Gecko</td>
-            <td><a href="#">Mozilla 1.0</a></td>
-            <td>Win 95+ / OSX.1+</td>
-            <td class="text-center">1</td>
-            <td><span class="label label-warning">B</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" /></td>
-            <td>Gecko</td>
-            <td>Mozilla 1.1</td>
-            <td>Win 95+ / OSX.1+</td>
-            <td class="text-center">1.1</td>
-            <td><span class="label label-success">A</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr class="table-flag-blue">
-            <td><input type="checkbox" /></td>
-            <td>Misc</td>
-            <td>IE Mobile</td>
-            <td>Windows Mobile 6</td>
-            <td class="text-center">-</td>
-            <td><span class="label label-important">C</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" /></td>
-            <td>Gecko</td>
-            <td><a href="#">Mozilla 1.2</a></td>
-            <td>Win 95+ / OSX.1+</td>
-            <td class="text-center">1</td>
-            <td><span class="label label-warning">B</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr class="table-flag-red">
-            <td><input type="checkbox" /></td>
-            <td>Presto</td>
-            <td>Opera 7.7</td>
-            <td>Win 95+ / OSX.2+</td>
-            <td class="text-center">-</td>
-            <td><span class="label label-success">A</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td><input type="checkbox" /></td>
-            <td>Gecko</td>
-            <td>Mozilla 1.7</td>
-            <td>Win 98+ / OSX.1+</td>
-            <td class="text-center">1.8</td>
-            <td><span class="label label-success">A</span></td>
-            <td>
-                <div class="btn-group">
-                    <a class="btn btn-small show-tooltip" title="View" href="#"><i class="icon-zoom-in"></i></a>
-                    <a class="btn btn-small show-tooltip" title="Edit" href="#"><i class="icon-edit"></i></a>
-                    <a class="btn btn-small btn-danger show-tooltip" title="Delete" href="#"><i class="icon-trash"></i></a>
-                </div>
-            </td>
-        </tr>
+            <tr>
+		<td colspan="5" class="dataTables_empty">Loading data from server</td>
+            </tr>
     </tbody>
 </table>
                             </div>
@@ -350,81 +142,3 @@
         <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/DT_bootstrap.js"></script>
             
 
-<table>
-    <tr>
-        <th>Item</th>
-        <th>RUC</th>
-        <th>Categoria</th>		
-        <th>Nombre</th>
-        <th>Direccion</th>        
-        <th>Departamento</th>
-        <th>Provincia</th>		
-        <th>Distrito</th>		
-        <th>Telefono Fijo</th>
-        <th>Telefono Celular</th>
-        <th>Correo</th>
-        <th>Costo</th>	
-        <th>Observacion</th>
-        <th>User</th>
-        <th>Fecha</th>		
-        <th>&nbsp;</th>                
-        <th>&nbsp;</th>        
-    </tr>
-<!--recorro el arreglo de datos-->
-	<?php $contador = 1; ?>
-    <?php foreach ($this->datos as $d) : ?>
-
-        <tr>
-
-        <td>
-            <?php echo $contador++; ?>
-        </td>
-              
-        <td><?php echo $d->RUC; ?></td>
-                   
-        <td><?php echo $d->categoria; ?></td>				   
-				   
-        <td><?php echo $d->nombre; ?></td>
-                        
-        <td><?php echo $d->direccion; ?></td>
-                       
-        <td><?php echo $d->departamento;; ?></td>
-                   
-        <td><?php echo $d->provincia;; ?></td>
-                 
-        <td><?php echo $d->distrito; ?></td>
-
-        <td><?php echo $d->telefono_fijo; ?></td>
-
-        <td><?php echo $d->telefono_celular; ?></td>
-
-        <td><?php echo $d->mail; ?></td>
-
-        <td><?php echo $d->costo; ?></td>
-		
-        <td><?php echo $d->observacion; ?></td>		
-		
-        <td><?php echo $d->user; ?></td>
-
-        <td><?php echo $d->fecha; ?></td>	
-						 
-
-        <td>
-            <a href="<?php echo $this->url(array('controller' => 'proveedor',
-						'action' => 'update', 'ruc' => $d->RUC)); ?>"> 
-                <img src="<?php echo $this->baseUrl ?>/images/ico-editar.gif" title="Editar">
-            </a>
-        </td>
-        
-        <td>
-
-            <a href="<?php echo $this->url(array('controller' => 'proveedor',
-                       'action' => 'delete', 'ruc' => $d->RUC)); ?>">
-                <img src="<?php echo $this->baseUrl ?>/images/eliminar.png" title="Eliminar">
-            </a>
-        </td>
-        
-        </tr>
-<!--    fin del for-->
-    <?php endforeach; ?>
-</table>
