--- a/application/views/scripts/proveedor/index.phtml
+++ b/application/views/scripts/proveedor/index.phtml
@@ -113,7 +113,7 @@
             <th>observacion</th>
             <th>user</th>
             <th>fecha</th>            
-            <th style="width:100px">Action</th>
+            <!--<th style="width:100px">Action</th>-->
         </tr>
     </thead>
     <tbody>
