--- a/application/views/scripts/provincia/index.phtml
+++ b/application/views/scripts/provincia/index.phtml
@@ -1,1 +1,129 @@
-<br /><br /><center>View script for controller <b>Provincia</b> and script/action name <b>index</b></center>
+<!--FALTA EL BOTON EXPORTAR Y AGREGAR -->
+
+<!--page specific css styles-->
+<link rel="stylesheet" href="<?php echo $this->baseUrl ?>/assets/data-tables/DT_bootstrap.css" />
+
+<script>
+    
+    $(document).ready(function(){
+        
+        if (jQuery().dataTable) {
+            $("#table1").dataTable({
+                bProcessing: true,
+                bServerSide: true,
+                sAjaxSource: "provincia/listarprovincias",                
+                aLengthMenu: [
+                    [10, 15, 25, 50, 100, -1],
+                    [10, 15, 25, 50, 100, "All"]
+                ],
+                iDisplayLength: 10,
+                oLanguage: {
+                    sLengthMenu: "_MENU_ Records per page",
+                    sInfo: "_START_ - _END_ of _TOTAL_",
+                    sInfoEmpty: "0 - 0 of 0",
+                    oPaginate: {
+                        sPrevious: "Prev",
+                        sNext: "Next"
+                    }
+                }, 
+                fnFooterCallback: function ( nRow, aaData, iStart, iEnd, aiDisplay ) {
+                        $(".nice-scroll").getNiceScroll().resize()
+                }
+            })
+        }
+
+    })
+    
+    
+
+
+</script>
+
+
+            <!-- BEGIN Content -->
+            <div id="main-content">
+                <!-- BEGIN Page Title -->
+                <div class="page-title">
+                    <div>
+                        <h1><i class="icon-file-alt"></i> Dynamic Table</h1>
+                        <h4>Dynamic tables by DataTables</h4>
+                    </div>
+                </div>
+                <!-- END Page Title -->
+
+                <!-- BEGIN Breadcrumb -->
+                <div id="breadcrumbs">
+                    <ul class="breadcrumb">
+                        <li>
+                            <i class="icon-home"></i>
+                            <a href="index.html">Home</a>
+                            <span class="divider"><i class="icon-angle-right"></i></span>
+                        </li>
+                        <li class="active">Dynamic Table</li>
+                    </ul>
+                </div>
+                <!-- END Breadcrumb -->
+
+                <!-- BEGIN Main Content -->
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div class="box">
+                            <div class="box-title">
+                                <h3><i class="icon-table"></i> Dynamic Table</h3>
+                                <div class="box-tool">
+                                    <a data-action="collapse" href="#"><i class="icon-chevron-up"></i></a>
+                                    <a data-action="close" href="#"><i class="icon-remove"></i></a>
+                                </div>
+                            </div>
+                            <div class="box-content">
+                                <div class="btn-toolbar pull-right clearfix">
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Add new record" href="#"><i class="icon-plus"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Edit selected" href="#"><i class="icon-edit"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Delete selected" href="#"><i class="icon-trash"></i></a>
+                                    </div>
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Print" href="#"><i class="icon-print"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Export to PDF" href="#"><i class="icon-file-text-alt"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Export to Exel" href="#"><i class="icon-table"></i></a>
+                                    </div>
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Refresh" href="#"><i class="icon-repeat"></i></a>
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+<table class="table table-advance" id="table1">
+    <thead>
+        <tr>
+            <th>idprovincia</th>
+            <th>nombres</th>
+            <th>iddepartamento</th>
+            <!--<th style="width:100px">Action</th>-->
+        </tr>
+    </thead>
+    <tbody>
+            <tr>
+		<td colspan="5" class="dataTables_empty">Loading data from server</td>
+            </tr>
+    </tbody>
+</table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- END Main Content -->
+                
+                <footer>
+                    <p>2013 © FLATY Admin Template.</p>
+                </footer>
+
+                <a id="btn-scrollup" class="btn btn-circle btn-large" href="#"><i class="icon-chevron-up"></i></a>
+            </div>
+            <!-- END Content -->
+            
+            
+        <!--page specific plugin scripts-->
+        <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/jquery.dataTables.js"></script>
+        <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/DT_bootstrap.js"></script>
+            
+
