--- a/application/views/scripts/proveedor/add.phtml
+++ b/application/views/scripts/proveedor/add.phtml
@@ -1,11 +1,9 @@
-<fieldset>
-<?php echo $this->form; ?>
-</fieldset>
+<link rel="stylesheet" href="<?php echo $this->baseUrl ?>/assets/data-tables/DT_bootstrap.css" />
 
 <style>
 fieldset{
 
-	border: 1px solid;
+	border: none;
 	
 }
 
@@ -29,10 +27,8 @@ fieldset{
 	height: 100px;
 }
 
-
-
 /* Cambiar para cada formulario*/
-#idcrematorio{
+#idproveedor-label{
 	display:none;
 }
 
@@ -40,67 +36,141 @@ fieldset{
 	margin-left: 229px;
 }
 
-ul 
-{
-list-style-image:url('<?php echo $this->baseUrl ?>/images/bullet_blue.gif');
-}
-
 </style>
 
 
 <script>
 
-
-$('dl').addClass('dl-horizontal');
-
-$('#RUC').attr('placeholder','digite 11 digitos')
-$('#mail').attr('placeholder','alguien@hotmail.com')
-$('#observacion').attr('rows','5')
-
-</script>
-
-<script>
-
-
-	$('#iddepartamento').change( function(e){
+$(document).ready(function(){
+    
+    
+    $('dl').addClass('dl-horizontal');
+    $('dd').height('40px')
+    $('#RUC').attr('placeholder','digite 11 digitos')
+    $('#observacion').attr('rows','5')
+    $('#submitbutton').addClass('btn btn-primary');
 	
-		var codDepa = $(this).val()
-		//alert(codDepa)
-		$.get('<?php echo $this->url(array('controller' => 'proveedor','action' => 'listarprov') ); ?>',{  codDepa:codDepa }, function(data) {
-			
-			$('#idprovincias').empty()	
-			$('#iddistrito').empty()	
-			
-			$('#idprovincias').append("<option value='0'>select</option>")			
-			$.each($.parseJSON(data), function(index, value) {
-				$('#idprovincias').append("<option value="+value[0]+">"+value[1]+"</option>")
-			  
-			});
+        
+    //combos dependientes    
+    alert('hhh')
+    $('#iddepartamento').change( function(e){
 
-		});
-			
-		
-	})
+            var codDepa = $(this).val()
+            //alert(codDepa)
+            $.get('<?php echo $this->url(array('controller' => 'proveedor','action' => 'listarprov') ); ?>',{  codDepa:codDepa }, function(data) {
+
+                    $('#idprovincias').empty()	
+                    $('#iddistrito').empty()	
+
+                    $('#idprovincias').append("<option value='0'>select</option>")			
+                    $.each($.parseJSON(data), function(index, value) {
+                            $('#idprovincias').append("<option value="+value[0]+">"+value[1]+"</option>")
+
+                    });
+
+            });
 
 
-	$('#idprovincias').change( function(e){
+    })
 
-		var codDistr = $(this).val()
-		$.get('<?php echo $this->url(array('controller' => 'proveedor','action' => 'listardistri') ); ?>',{  codDistr:codDistr }, function(data) {
-			
-			$('#iddistrito').empty()
-			
-			$('#iddistrito').append("<option value='0'>select</option>")			
-			$.each($.parseJSON(data), function(index, value) {
-				$('#iddistrito').append("<option value="+value[0]+">"+value[1]+"</option>")
-			  
-			});
 
-		});
-			
-		
-	})
+    $('#idprovincias').change( function(e){
 
+            var codDistr = $(this).val()
+            $.get('<?php echo $this->url(array('controller' => 'proveedor','action' => 'listardistri') ); ?>',{  codDistr:codDistr }, function(data) {
+
+                    $('#iddistrito').empty()
+
+                    $('#iddistrito').append("<option value='0'>select</option>")			
+                    $.each($.parseJSON(data), function(index, value) {
+                            $('#iddistrito').append("<option value="+value[0]+">"+value[1]+"</option>")
+
+                    });
+
+            });
+
+
+    })
+})
     
 </script>
+
+ <!-- BEGIN Content -->
+            <div id="main-content">
+                <!-- BEGIN Page Title -->
+                <div class="page-title">
+                    <div>
+                        <h1><i class="icon-file-alt"></i> Dynamic Table</h1>
+                        <h4>Dynamic tables by DataTables</h4>
+                    </div>
+                </div>
+                <!-- END Page Title -->
+
+                <!-- BEGIN Breadcrumb -->
+                <div id="breadcrumbs">
+                    <ul class="breadcrumb">
+                        <li>
+                            <i class="icon-home"></i>
+                            <a href="index.html">Home</a>
+                            <span class="divider"><i class="icon-angle-right"></i></span>
+                        </li>
+                        <li class="active">Dynamic Table</li>
+                    </ul>
+                </div>
+                <!-- END Breadcrumb -->
+
+                <!-- BEGIN Main Content -->
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div class="box">
+                            <div class="box-title">
+                                <h3><i class="icon-table"></i> Dynamic Table</h3>
+                                <div class="box-tool">
+                                    <a data-action="collapse" href="#"><i class="icon-chevron-up"></i></a>
+                                    <a data-action="close" href="#"><i class="icon-remove"></i></a>
+                                </div>
+                            </div>
+                            <div class="box-content">
+                                <div class="btn-toolbar pull-right clearfix">
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Add new record" href="#"><i class="icon-plus"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Edit selected" href="#"><i class="icon-edit"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Delete selected" href="#"><i class="icon-trash"></i></a>
+                                    </div>
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Print" href="#"><i class="icon-print"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Export to PDF" href="#"><i class="icon-file-text-alt"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Export to Exel" href="#"><i class="icon-table"></i></a>
+                                    </div>
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Refresh" href="#"><i class="icon-repeat"></i></a>
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+<fieldset>
+<legend></legend>
+<?php echo $this->form; ?>
+</fieldset>
+                                
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- END Main Content -->
+                
+                <footer>
+                    <p>2013 © FLATY Admin Template.</p>
+                </footer>
+
+                <a id="btn-scrollup" class="btn btn-circle btn-large" href="#"><i class="icon-chevron-up"></i></a>
+            </div>
+            <!-- END Content -->
+            
+            
+        <!--page specific plugin scripts-->
+        <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/jquery.dataTables.js"></script>
+        <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/DT_bootstrap.js"></script>
+            
+
 
