--- a/application/views/scripts/proveedor/index.phtml
+++ b/application/views/scripts/proveedor/index.phtml
@@ -5,17 +5,20 @@
 
 <script>
     
+        function test1(ruc){
+            $('#modal-2 .modal-body').load('<?php echo $this->baseUrl ?>/proveedor/viewrecord/ruc/'+ruc)
+        }
+    
     $(document).ready(function(){
+       
+
         
         if (jQuery().dataTable) {
             $("#table1").dataTable({
-                //Scroll:
-                //sScrollX: "100%",
-                //sScrollXInner: "110%",
-                //bScrollCollapse: true,                
+                bScrollCollapse: true,                
                 bProcessing: true,
                 bServerSide: true,
-                sAjaxSource: "proveedor/listarproveedores",                
+                sAjaxSource: "<?php echo $this->baseUrl ?>/proveedor/listarproveedores",                
                 aLengthMenu: [
                     [10, 15, 25, 50, 100, -1],
                     [10, 15, 25, 50, 100, "All"]
@@ -29,12 +32,38 @@
                         sPrevious: "Prev",
                         sNext: "Next"
                     }
-                }, 
-                fnFooterCallback: function ( nRow, aaData, iStart, iEnd, aiDisplay ) {
-                        $(".nice-scroll").getNiceScroll().resize()
+                },
+                 aoColumns: [
+                 null ,  
+                 {  "bSearchable": false,
+                    "bSortable": false
+                 }        
+                , 
+                { "bVisible": true}, 
+                null, 
+                null,
+                null, 
+                null,
+                null,
+                { "sName": "ACTION",
+                  "bSearchable": false,
+                  "bSortable": false,
+                  "fnRender": function (oObj) {
+                     return " <div class='btn-group'>\n\
+                            <a class='btn btn-small show-tooltip' title='View' href='#modal-2' data-toggle='modal' ><i onclick='test1(" + oObj.aData[0] + ")' class='icon-zoom-in'></i></a>\n\
+                            <a class='btn btn-small show-tooltip' title='Edit' href='<?php echo $this->baseUrl ?>/proveedor/update/ruc/" + oObj.aData[0] + "'><i class='icon-edit'></i></a>\n\
+                            <a class='btn btn-small btn-danger show-tooltip' title='Delete' href='<?php echo $this->baseUrl ?>/proveedor/delete/ruc/" + oObj.aData[0] + "'><i class='icon-trash'></i></a></div>  ";
+                   }
                 }
+                        
+              ]          
+                          
+       
             })
         }
+              
+        
+
 
     })
     
@@ -82,7 +111,7 @@
                             <div class="box-content">
                                 <div class="btn-toolbar pull-right clearfix">
                                     <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Add new record" href="#"><i class="icon-plus"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Add new record" href="<?php echo "$this->baseUrl" ?>/proveedor/add"><i class="icon-plus"></i></a>
                                         <a class="btn btn-circle show-tooltip" title="Edit selected" href="#"><i class="icon-edit"></i></a>
                                         <a class="btn btn-circle show-tooltip" title="Delete selected" href="#"><i class="icon-trash"></i></a>
                                     </div>
@@ -107,13 +136,13 @@
             <th>provincia</th>
             <th>distrito</th>
             <th>telefono_fijo</th>
-            <th class="text-center">telefono_celular</th>
+            <!--<th class="text-center">telefono_celular</th>
             <th>mail</th>
-            <!--<th>costo</th>
+            <th>costo</th>
             <th>observacion</th>
             <th>user</th>
             <th>fecha</th>-->            
-            <!--<th style="width:100px">Action</th>-->
+            <th style="width:100px">Action</th>
         </tr>
     </thead>
     <tbody>
@@ -126,6 +155,26 @@
                         </div>
                     </div>
                 </div>
+
+    <div id="modal-2" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="myModalLabel1">Modal header</h3>
+        </div>
+        <div class="modal-body">
+            
+            
+           
+            
+            
+        </div>
+        <div class="modal-footer">
+            <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+            <button class="btn btn-primary" data-dismiss="modal">Save changes</button>
+        </div>
+    </div>                
+                
+                
                 <!-- END Main Content -->
                 
                 <footer>
