--- a/application/views/scripts/proveedor/update.phtml
+++ b/application/views/scripts/proveedor/update.phtml
@@ -1,12 +1,9 @@
-<fieldset>
-<legend></legend>
-<?php echo $this->form; ?>
-</fieldset>
+<link rel="stylesheet" href="<?php echo $this->baseUrl ?>/assets/data-tables/DT_bootstrap.css" />
 
 <style>
 fieldset{
 
-	border: 1px solid;
+	border: none;
 	
 }
 
@@ -44,19 +41,16 @@ fieldset{
 
 <script>
 
+$(document).ready(function(){
 
-$('dl').addClass('dl-horizontal');
-
-$('#RUC').attr('placeholder','digite 11 digitos')
-$('#RUC').attr('readonly','')
-$('#observacion').attr('rows','5')
-
-</script>
-
-<script>
-
-
-	$('#iddepartamento').change( function(e){
+    $('dl').addClass('dl-horizontal');
+    $('dd').height('40px')
+    $('#RUC').attr('placeholder','digite 11 digitos')
+    $('#RUC').attr('readonly','')
+    $('#observacion').attr('rows','5')
+    $('#submitbutton').addClass('btn btn-primary');        
+        
+        $('#iddepartamento').change( function(e){
 	
 		var codDepa = $(this).val()
 		//alert(codDepa)
@@ -95,6 +89,85 @@ $('#observacion').attr('rows','5')
 		
 	})
 
-    
+})    
 </script>
+
+ <!-- BEGIN Content -->
+            <div id="main-content">
+                <!-- BEGIN Page Title -->
+                <div class="page-title">
+                    <div>
+                        <h1><i class="icon-file-alt"></i> Dynamic Table</h1>
+                        <h4>Dynamic tables by DataTables</h4>
+                    </div>
+                </div>
+                <!-- END Page Title -->
+
+                <!-- BEGIN Breadcrumb -->
+                <div id="breadcrumbs">
+                    <ul class="breadcrumb">
+                        <li>
+                            <i class="icon-home"></i>
+                            <a href="index.html">Home</a>
+                            <span class="divider"><i class="icon-angle-right"></i></span>
+                        </li>
+                        <li class="active">Dynamic Table</li>
+                    </ul>
+                </div>
+                <!-- END Breadcrumb -->
+
+                <!-- BEGIN Main Content -->
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div class="box">
+                            <div class="box-title">
+                                <h3><i class="icon-table"></i> Dynamic Table</h3>
+                                <div class="box-tool">
+                                    <a data-action="collapse" href="#"><i class="icon-chevron-up"></i></a>
+                                    <a data-action="close" href="#"><i class="icon-remove"></i></a>
+                                </div>
+                            </div>
+                            <div class="box-content">
+                                <div class="btn-toolbar pull-right clearfix">
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Add new record" href="#"><i class="icon-plus"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Edit selected" href="#"><i class="icon-edit"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Delete selected" href="#"><i class="icon-trash"></i></a>
+                                    </div>
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Print" href="#"><i class="icon-print"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Export to PDF" href="#"><i class="icon-file-text-alt"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Export to Exel" href="#"><i class="icon-table"></i></a>
+                                    </div>
+                                    <div class="btn-group">
+                                        <a class="btn btn-circle show-tooltip" title="Refresh" href="#"><i class="icon-repeat"></i></a>
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+<fieldset>
+<legend></legend>
+<?php echo $this->form; ?>
+</fieldset>
+                                
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- END Main Content -->
+                
+                <footer>
+                    <p>2013 © FLATY Admin Template.</p>
+                </footer>
+
+                <a id="btn-scrollup" class="btn btn-circle btn-large" href="#"><i class="icon-chevron-up"></i></a>
+            </div>
+            <!-- END Content -->
+            
+            
+        <!--page specific plugin scripts-->
+        <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/jquery.dataTables.js"></script>
+        <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/DT_bootstrap.js"></script>
+            
+
 
