--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -479,7 +479,8 @@
                                   
                                </ul>
                                <!-- END Submenu -->
-                            </li>                            
+                            </li> 
+                            
                             <li>
                                <a href="#" class="dropdown-toggle">
                                    <i class="icon-edit"></i>
@@ -494,7 +495,23 @@
                                    <li><a href="<?php echo $this->url(array('controller' => 'distrito','action' => 'index')); ?>">Distrito</a></li>
                                </ul>
                                <!-- END Submenu -->
+                            </li>     
+                            
+                            <li>
+                               <a href="#" class="dropdown-toggle">
+                                   <i class="icon-edit"></i>
+                                   <span>Permisos</span>
+                                   <b class="arrow icon-angle-right"></b>
+                               </a>
+
+                               <!-- BEGIN Submenu -->
+                               <ul class="submenu">
+                                   <li><a href="<?php echo $this->url(array('controller' => 'permisos','action' => 'index')); ?>">Permisos</a></li>
+                               </ul>
+                               <!-- END Submenu -->
                             </li>                            
+
+                            
                             
                         </ul>
                         <!-- END Submenu -->
