--- a/application/views/scripts/categoria/index.phtml
+++ b/application/views/scripts/categoria/index.phtml
@@ -25,7 +25,7 @@
                 ],
                 iDisplayLength: 10,
                 oLanguage: {
-                    sLengthMenu: "_MENU_ Records per page",
+                    sLengthMenu: "_MENU_ Registros por pagina",
                     sInfo: "_START_ - _END_ of _TOTAL_",
                     sInfoEmpty: "0 - 0 of 0",
                     oPaginate: {
@@ -41,7 +41,6 @@
                   "bSortable": false,
                   "fnRender": function (oObj) {
                      return " <div class='btn-group'>\n\
-                            <a class='btn btn-small show-tooltip' title='View' href='#modal-2' data-toggle='modal' ><i onclick='test1(" + oObj.aData[0] + ")' class='icon-zoom-in'></i></a>\n\
                             <a class='btn btn-small show-tooltip' title='Edit' href='<?php echo $this->baseUrl ?>/categoria/update/idcategoria/" + oObj.aData[0] + "'><i class='icon-edit'></i></a>\n\
                             <a class='btn btn-small btn-danger show-tooltip' title='Delete' href='<?php echo $this->baseUrl ?>/categoria/delete/idcategoria/" + oObj.aData[0] + "'><i class='icon-trash'></i></a></div>  ";
                    }
@@ -69,8 +68,8 @@
                 <!-- BEGIN Page Title -->
                 <div class="page-title">
                     <div>
-                        <h1><i class="icon-file-alt"></i> Dynamic Table</h1>
-                        <h4>Dynamic tables by DataTables</h4>
+                        <h1><i class="icon-file-alt"></i> Categorias</h1>
+                        <h4>Mantenimiento de Categorias</h4>
                     </div>
                 </div>
                 <!-- END Page Title -->
@@ -80,10 +79,10 @@
                     <ul class="breadcrumb">
                         <li>
                             <i class="icon-home"></i>
-                            <a href="index.html">Home</a>
+                            <a href="<?php echo $this->baseUrl ?>">Home</a>
                             <span class="divider"><i class="icon-angle-right"></i></span>
                         </li>
-                        <li class="active">Dynamic Table</li>
+                        <li class="active">Categoria</li>
                     </ul>
                 </div>
                 <!-- END Breadcrumb -->
@@ -93,7 +92,7 @@
                     <div class="span12">
                         <div class="box">
                             <div class="box-title">
-                                <h3><i class="icon-table"></i> Dynamic Table</h3>
+                                <h3><i class="icon-table"></i> Lista de Categorias</h3>
                                 <div class="box-tool">
                                     <a data-action="collapse" href="#"><i class="icon-chevron-up"></i></a>
                                     <a data-action="close" href="#"><i class="icon-remove"></i></a>
@@ -102,14 +101,12 @@
                             <div class="box-content">
                                 <div class="btn-toolbar pull-right clearfix">
                                     <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Add new record" href="<?php echo "$this->baseUrl" ?>/categoria/add"><i class="icon-plus"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Edit selected" href="#"><i class="icon-edit"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Delete selected" href="#"><i class="icon-trash"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Nueva categoria" href="<?php echo "$this->baseUrl" ?>/categoria/add"><i class="icon-plus"></i></a>
                                     </div>
                                     <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Print" href="#"><i class="icon-print"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Export to PDF" href="#"><i class="icon-file-text-alt"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Export to Exel" href="#"><i class="icon-table"></i></a>
+                                        <a class="btn btn-circle show-tooltip" href="<?php echo "$this->baseUrl" ?>/categoria/exportarpdf" title="Imprimir"><i class="icon-print"></i></a>
+                                        <a class="btn btn-circle show-tooltip" href="<?php echo "$this->baseUrl" ?>/categoria/exportarpdf" title="Exportar PDF"><i class="icon-file-text-alt"></i></a>
+                                        <a class="btn btn-circle show-tooltip" href="<?php echo "$this->baseUrl" ?>/categoria/exportarexcel" title="Exportar Excel"><i class="icon-table"></i></a>
                                     </div>
                                     <div class="btn-group">
                                         <a class="btn btn-circle show-tooltip" title="Refresh" href="#"><i class="icon-repeat"></i></a>
@@ -121,12 +118,16 @@
         <tr>
             <th>idCategoria</th>
             <th>categoria</th>
-            <th style="width:100px">Action</th>
+            <th style="width:100px">Accion</th>
         </tr>
     </thead>
     <tbody>
             <tr>
-		<td colspan="5" class="dataTables_empty">Loading data from server</td>
+		<td colspan="5" class="dataTables_empty">
+                                <div class="progress progress-striped active">
+                                    <div style="width: 45%;" class="bar"></div>
+                                </div>
+                </td>
             </tr>
     </tbody>
 </table>
@@ -153,16 +154,7 @@
         </div>
     </div>                
                 
-                
-                <!-- END Main Content -->
-                
-                <footer>
-                    <p>2013 © FLATY Admin Template.</p>
-                </footer>
-
-                <a id="btn-scrollup" class="btn btn-circle btn-large" href="#"><i class="icon-chevron-up"></i></a>
-            </div>
-            <!-- END Content -->
+               
             
             
         <!--page specific plugin scripts-->
