--- a/application/views/scripts/index/error.phtml
+++ b/application/views/scripts/index/error.phtml
@@ -1,1 +1,2 @@
-Operación restringida para este usuario
+<h2 style="margin-left: 215px">No tiene permisos para ejecutar esta acción</h2>
+<h3 style="margin-left: 215px">Solicite permisos al administrador</h3>
