--- a/application/views/scripts/error/error.phtml
+++ b/application/views/scripts/error/error.phtml
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h3>An error occurred</h3>
-  <h4><?php echo $this->message ?></h4>
+  <h4 style="margin-left: 215px"><?php echo $this->message ?></h4>
 
   <?php if (isset($this->exception)): ?>
   
