--- a/application/views/scripts/permisos/add.phtml
+++ b/application/views/scripts/permisos/add.phtml
@@ -70,21 +70,27 @@ $(document).ready(function(){
                 <!-- BEGIN Page Title -->
                 <div class="page-title">
                     <div>
-                        <h1><i class="icon-file-alt"></i> Dynamic Table</h1>
-                        <h4>Dynamic tables by DataTables</h4>
+                        <h1><i class="icon-file-alt"></i> Privilegios</h1>
+                        <h4>Mantenimiento de Privilegios</h4>
                     </div>
                 </div>
                 <!-- END Page Title -->
 
                 <!-- BEGIN Breadcrumb -->
                 <div id="breadcrumbs">
-                    <ul class="breadcrumb">
+                     <ul class="breadcrumb">
                         <li>
                             <i class="icon-home"></i>
-                            <a href="index.html">Home</a>
+                            <a href="<?php echo $this->baseUrl ?>">Home</a>
                             <span class="divider"><i class="icon-angle-right"></i></span>
                         </li>
-                        <li class="active">Dynamic Table</li>
+                        <li>
+                            <a href="<?php echo $this->baseUrl ?>/permisos">Permisos</a>
+                            <span class="divider"><i class="icon-angle-right"></i></span>                        
+                        </li>
+                        <li class="active">Agregar
+                        </li>
+                        
                     </ul>
                 </div>
                 <!-- END Breadcrumb -->
@@ -94,31 +100,15 @@ $(document).ready(function(){
                     <div class="span12">
                         <div class="box">
                             <div class="box-title">
-                                <h3><i class="icon-table"></i> Dynamic Table</h3>
+                                <h3><i class="icon-table"></i> Nuevo permiso</h3>
                                 <div class="box-tool">
                                     <a data-action="collapse" href="#"><i class="icon-chevron-up"></i></a>
                                     <a data-action="close" href="#"><i class="icon-remove"></i></a>
                                 </div>
                             </div>
                             <div class="box-content">
-                                <div class="btn-toolbar pull-right clearfix">
-                                    <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Add new record" href="#"><i class="icon-plus"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Edit selected" href="#"><i class="icon-edit"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Delete selected" href="#"><i class="icon-trash"></i></a>
-                                    </div>
-                                    <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Print" href="#"><i class="icon-print"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Export to PDF" href="#"><i class="icon-file-text-alt"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Export to Exel" href="#"><i class="icon-table"></i></a>
-                                    </div>
-                                    <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Refresh" href="#"><i class="icon-repeat"></i></a>
-                                    </div>
-                                </div>
-                                <div class="clearfix"></div>
+                              
 <fieldset>
-    <legend>&nbsp;&nbsp; Agregar Privilegios</legend>
 <?php echo $this->form; ?>
 </fieldset>
                                 
@@ -127,15 +117,6 @@ $(document).ready(function(){
                         </div>
                     </div>
                 </div>
-                <!-- END Main Content -->
-                
-                <footer>
-                    <p>2013 © FLATY Admin Template.</p>
-                </footer>
-
-                <a id="btn-scrollup" class="btn btn-circle btn-large" href="#"><i class="icon-chevron-up"></i></a>
-            </div>
-            <!-- END Content -->
             
             
         <!--page specific plugin scripts-->
