--- a/application/views/scripts/vehiculo/index.phtml
+++ b/application/views/scripts/vehiculo/index.phtml
@@ -7,6 +7,11 @@
     
     
     function test1(placa){
+ 
+        $('#modal-2 .modal-body').html("<div class='progress progress-striped active'>\n\
+                                            <div style='width: 45%;' class='bar'></div>\n\
+                                            </div>");
+        
         $('#modal-2 .modal-body').load('<?php echo $this->baseUrl ?>/vehiculo/viewrecord/placa/'+placa)
     }
     
@@ -24,7 +29,7 @@
                 ],
                 iDisplayLength: 10,
                 oLanguage: {
-                    sLengthMenu: "_MENU_ Records per page",
+                    sLengthMenu: "_MENU_ Registros por pagina",
                     sInfo: "_START_ - _END_ of _TOTAL_",
                     sInfoEmpty: "0 - 0 of 0",
                     oPaginate: {
@@ -42,18 +47,13 @@
                 null, 
                 null,
                 null,
-                null,  
-                null, 
-                null,
-                null, 
-                null,
                 null,                
                 { "sName": "ACTION",
                   "bSearchable": false,
                   "bSortable": false,
                   "fnRender": function (oObj) {
                      return " <div class='btn-group'>\n\
-                            <a class='btn btn-small show-tooltip' title='View' href='#modal-2' data-toggle='modal' ><i onclick='test1(" + oObj.aData[0] + ")' class='icon-zoom-in'></i></a>\n\
+                            <a onclick='test1(\"" + oObj.aData[0] + "\")' class='btn btn-small show-tooltip' title='View' href='#modal-2' data-toggle='modal' ><i class='icon-zoom-in'></i></a>\n\
                             <a class='btn btn-small show-tooltip' title='Edit' href='<?php echo $this->baseUrl ?>/vehiculo/update/placa/" + oObj.aData[0] + "'><i class='icon-edit'></i></a>\n\
                             <a class='btn btn-small btn-danger show-tooltip' title='Delete' href='<?php echo $this->baseUrl ?>/vehiculo/delete/placa/" + oObj.aData[0] + "'><i class='icon-trash'></i></a></div>  ";
                    }
@@ -76,8 +76,8 @@
                 <!-- BEGIN Page Title -->
                 <div class="page-title">
                     <div>
-                        <h1><i class="icon-file-alt"></i> Dynamic Table</h1>
-                        <h4>Dynamic tables by DataTables</h4>
+                        <h1><i class="icon-file-alt"></i> Vehiculos</h1>
+                        <h4>Mantenimiento de Vehiculos</h4>
                     </div>
                 </div>
                 <!-- END Page Title -->
@@ -87,10 +87,10 @@
                     <ul class="breadcrumb">
                         <li>
                             <i class="icon-home"></i>
-                            <a href="index.html">Home</a>
+                            <a href="<?php echo $this->baseUrl ?>">Home</a>
                             <span class="divider"><i class="icon-angle-right"></i></span>
                         </li>
-                        <li class="active">Dynamic Table</li>
+                        <li class="active">Vehiculos</li>
                     </ul>
                 </div>
                 <!-- END Breadcrumb -->
@@ -100,7 +100,7 @@
                     <div class="span12">
                         <div class="box">
                             <div class="box-title">
-                                <h3><i class="icon-table"></i> Dynamic Table</h3>
+                                <h3><i class="icon-table"></i> Lista de Vehiculos</h3>
                                 <div class="box-tool">
                                     <a data-action="collapse" href="#"><i class="icon-chevron-up"></i></a>
                                     <a data-action="close" href="#"><i class="icon-remove"></i></a>
@@ -109,14 +109,12 @@
                             <div class="box-content">
                                 <div class="btn-toolbar pull-right clearfix">
                                     <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Add new record" href="<?php echo "$this->baseUrl" ?>/vehiculo/add"><i class="icon-plus"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Edit selected" href="#"><i class="icon-edit"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Delete selected" href="#"><i class="icon-trash"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Nuevo vehiculo" href="<?php echo "$this->baseUrl" ?>/vehiculo/add"><i class="icon-plus"></i></a>
                                     </div>
                                     <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Print" href="#"><i class="icon-print"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Export to PDF" href="#"><i class="icon-file-text-alt"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Export to Exel" href="#"><i class="icon-table"></i></a>
+                                        <a class="btn btn-circle show-tooltip" href="<?php echo "$this->baseUrl" ?>/vehiculo/exportarpdf" title="Imprimir"><i class="icon-print"></i></a>
+                                        <a class="btn btn-circle show-tooltip" href="<?php echo "$this->baseUrl" ?>/vehiculo/exportarpdf" title="Exportar PDF" ><i class="icon-file-text-alt"></i></a>
+                                        <a class="btn btn-circle show-tooltip" href="<?php echo "$this->baseUrl" ?>/vehiculo/exportarexcel" title="Exportar Excel" ><i class="icon-table"></i></a>
                                     </div>
                                     <div class="btn-group">
                                         <a class="btn btn-circle show-tooltip" title="Refresh" href="#"><i class="icon-repeat"></i></a>
@@ -132,18 +130,17 @@
             <th>Tipo</th>        
             <th>Color</th>
             <th>Combustible</th>		
-            <th>Motor</th>		
-            <th>Serie</th>
-            <th>Pasajero</th>
-            <th>Asientos</th>
-            <th>Fabricacion</th>	
-            <th>Observacion</th>                      
+            <th>Motor</th>		                    
             <th style="width:100px">Action</th>
         </tr>
     </thead>
     <tbody>
             <tr>
-		<td colspan="5" class="dataTables_empty">Loading data from server</td>
+		<td colspan="5" class="dataTables_empty">
+                                <div class="progress progress-striped active">
+                                    <div style="width: 45%;" class="bar"></div>
+                                </div>                                       
+                </td>
             </tr>
     </tbody>
 </table>
@@ -151,17 +148,23 @@
                         </div>
                     </div>
                 </div>
-                <!-- END Main Content -->
-                
-                <footer>
-                    <p>2013 © FLATY Admin Template.</p>
-                </footer>
 
-                <a id="btn-scrollup" class="btn btn-circle btn-large" href="#"><i class="icon-chevron-up"></i></a>
-            </div>
-            <!-- END Content -->
+                
+ <div id="modal-2" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="myModalLabel1">Vehiculo</h3>
+        </div>
+        <div class="modal-body">
             
             
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" data-dismiss="modal">Aceptar</button>
+        </div>
+ </div>                    
+            
+                
         <!--page specific plugin scripts-->
         <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/jquery.dataTables.js"></script>
         <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/DT_bootstrap.js"></script>
